# cDataPipeline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/fdp/: fdp.h
src/: fdp_c_bindings.cxx
tests/: CMakeLists.txt
tests/integrated_tests/: cDataPipelineSimpleModel.yaml
